--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<script type="text/javascript">
+<!--
+if (screen.width <= 699) {
+  document.location = "https://www.figma.com/proto/VDCniBegkrvg8vdiDOL5ZO/Portfolio?page-id=109%3A3&node-id=109%3A4&viewport=1014%2C724%2C2.0816667079925537&scaling=min-zoom";
+}
+  else {
+  document.location = "https://www.figma.com/proto/VDCniBegkrvg8vdiDOL5ZO/Portfolio?page-id=0%3A1&node-id=0%3A2&viewport=-1798%2C-25%2C0.5&scaling=contain;  
+}
+//-->
+</script>
