--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <script type="text/javascript">
 
-if (screen.width <= 699) {
-  window.location.replace("https://www.figma.com/proto/VDCniBegkrvg8vdiDOL5ZO/Portfolio?page-id=123%3A0&node-id=123%3A1&viewport=619%2C785%2C1&scaling=contain;");
-}
-  else {
-  window.location.replace("https://www.figma.com/proto/VDCniBegkrvg8vdiDOL5ZO/Portfolio?page-id=123%3A0&node-id=123%3A1&viewport=619%2C785%2C1&scaling=contain;");  
-}
+
+  window.location.replace("https://kaus.notion.site/kaus/Kaustubh-Barde-Portfolio-8e116b17ba0d4a11a1bb635fc97d08b4");
+
 
 </script>
